[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiddlywiki_parser"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = ["beautifulsoup4>=4.8.0", "requests>=2.22.0"]

[project.scripts]
tiddlywiki_parser = "tiddlywiki_parser:main"

[dependency-groups]
dev = ["ruff>=0.9.10"]
