[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiddlywiki_parser"
description = "Library to extract tiddlers from a tiddlywiki file."
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = ["beautifulsoup4>=4.8.0", "requests>=2.22.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage  = "https://github.com/nephlm/tiddlywiki_parser"
Repository  = "https://github.com/nephlm/tiddlywiki_parser"
Issues  = "https://github.com/nephlm/tiddlywiki_parser/issues"


[project.scripts]
tiddlywiki_parser = "tiddlywiki_parser:main"

[dependency-groups]
dev = ["ruff>=0.9.10"]
